sql/time.cc
@@ -712,9 +712,9 @@ void make_truncated_value_warning(THD *thd, const char *str_val,
   else
     cs->cset->snprintf(cs, warn_buff, sizeof(warn_buff),
                        ER(ER_TRUNCATED_WRONG_VALUE),
-                       type_str, str.ptr());
-  push_warning_printf(thd, MYSQL_ERROR::WARN_LEVEL_WARN,
-		      ER_TRUNCATED_WRONG_VALUE, warn_buff);
+                       type_str, str.c_ptr());
+  push_warning(thd, MYSQL_ERROR::WARN_LEVEL_WARN,
+               ER_TRUNCATED_WRONG_VALUE, warn_buff);
 }
 
 
